# SegData

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  list.md  pyproject.toml  verify.py
raw/Dataset002_MSLesSeg/: dataset.json  get.md  info.md  plot.py  setup.py  stats.py
raw/Dataset003_MOTUM/: dataset.json  get.md  info.md  plot.py  setup.py  stats.py
raw/Dataset005_BUSBRA/: dataset.json  get.md  plot.py  setup.py  stats.py
raw/Dataset005_KvasirSEG/: dataset.json  get.md  info.md  plot.py  setup.py  stats.py
raw/Dataset006_BTXRD/: dataset.json  get.md  info.md  plot.py  setup.py  stats.py
raw/Datset001_Cellpose/: dataset.json  get.md  info.md  plot.py  setup.py  stats.py
src/: plot.py  stats.py  verify.py
tests/: test_datasets.py  test_setup_scripts.py  test_src_scripts.py
