[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "segdata"
version = "0.1.0"
description = "nnU-Net dataset validation and utilities"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "SegData Contributors"}
]
keywords = ["segmentation", "dataset", "nnunet", "validation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "cupy-cuda11x",
    "matplotlib>=3.8.0",
    "nibabel>=5.0.0",
    "pillow>=10.0.0",
    "tqdm>=4.60.0",
]

[project.scripts]
verify = "verify:main"

[tool.setuptools]
py-modules = ["verify"]

[tool.ruff]
line-length = 100
target-version = "py39"
exclude = [
    ".git",
    "__pycache__",
    ".venv",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "C",    # flake8-comprehensions
    "B",    # flake8-bugbear
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["verify"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
